# rdiff

./: .gitignore  .readthedocs.yaml  LICENSE.md  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: pypi.yml  test.yml
doc/source/: conf.py  contributing.rst  examples.rst  index.rst  installation.rst  usage.rst
doc/source/api/: index.rst  modules.rst  sdiff.cli.rst  sdiff.contextual.rst  sdiff.cython.rst  sdiff.presentation.rst  sdiff.rst
rdiff/: __main__.py  chunk.py  cmyers.pyx  compare.pxd  compare.pyx  myers.py  numpy.py  sequence.py
rdiff/cli/: path_util.py  processor.py
rdiff/contextual/: base.py  magic  path.py  table.py  text.py
rdiff/cython/: cmyers.pyx
rdiff/presentation/: base.py  string_tools.py
sdiff/: chunk.py  myers.py  numpy.py
sdiff/cli/: func_util.py  path_util.py  processor.py
sdiff/contextual/: base.py  magic  table.py  text.py
sdiff/cython/: cmyers.pyx
sdiff/presentation/: base.py  string_tools.py
tests/: conftest.py  test_chunk.py  test_cmyers.py  test_myers.py  test_numpy.py  test_path_util.py  test_sequence.py  test_string_tools.py  util.py
tests/contextual/: test_table.py
tests/test_presentation/: test_base.py  util.py
tests/test_presentation/cases/co2_emissions/: a.csv  b.csv  diff.csv.md  diff.excel.plain  diff.excel.txt  diff.feather.txt  diff.md  diff.parquet.txt  diff.txt
tests/test_presentation/cases/git/: diff-default.txt  diff.txt
tests/test_presentation/cases/readme/: b.txt  diff.txt
tests/test_script/: test_main.py  util.py
tests/test_script/cases/: diff.txt
tests/test_script/cases/co2_emissions/: b-add-col.csv  b-add-row.csv  b-empty-rm-col.csv  b-empty.csv  b-mosaic-edit.csv  b-rename-col.csv  b-rm-col.csv  b-rm-row.csv  b-single-edit.csv  diff-add-col-collapse.txt  diff-add-col-color.txt  diff-add-col-default.txt  (+64 more)
(+22 files in other folders)
